--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,4 +5,6 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "8088:8088"
+      - "${PORT}:8088"
+    environment:
+      - PORT=${PORT}
