--- a/template/base/SAMPLE.env
+++ b/template/base/SAMPLE.env
@@ -1,3 +1,6 @@
 VITE_BACKEND_URL=http://localhost:3010
 VITE_AUTH_REDIRECT_URL=http://localhost:8088
 VITE_PORT=8088
+VITE_POSTHOG_API_KEY=
+VITE_POSTHOG_HOST=
+VITE_POSTHOG_UI_HOST=
