--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "phosphor-react": "^1.4.1",
     "postcss": "^8.4.32",
     "postcss-import": "^15.1.0",
+    "posthog-js": "^1.165.0",
     "prettier": "^3.1.1",
     "react": "^18.3.1",
     "react-aria": "^3.34.3",
