--- a/template/base/package.json
+++ b/template/base/package.json
@@ -40,6 +40,7 @@
     "@radix-ui/react-tooltip": "^1.0.5",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@tanstack/react-table": "^8.5.15",
+    "@radix-ui/react-separator": "^1.1.0",
     "react-aria-components": "^1.3.3",
     "react-aria": "^3.34.3",
     "react-stately": "^3.24.0",
