--- a/package.json
+++ b/package.json
@@ -122,7 +122,8 @@
     "vite": "^3.1.0",
     "vite-plugin-dts": "1.0.3",
     "vite-plugin-top-level-await": "^1.3.0",
-    "watch": "^1.0.2"
+    "watch": "^1.0.2",
+    "@codesandbox/sandpack-react": "^2.19.9"
   },
   "dependencies": {
     "@antfu/ni": "^0.21.4",
