--- a/template/base/package.json
+++ b/template/base/package.json
@@ -41,6 +41,7 @@
     "@radix-ui/react-toast": "^1.1.3",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.0.5",
+    "@radix-ui/react-separator": "^1.1.0",
     "@tanstack/react-query": "^5.51.11",
     "@tanstack/react-router": "^1.39.4",
     "@tanstack/react-table": "^8.5.15",
