--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toggle-group": "^1.1.0",
@@ -122,7 +123,8 @@
     "vite": "^3.1.0",
     "vite-plugin-dts": "1.0.3",
     "vite-plugin-top-level-await": "^1.3.0",
-    "watch": "^1.0.2"
+    "watch": "^1.0.2",
+    "@codesandbox/sandpack-react": "^2.19.9"
   },
   "dependencies": {
     "@antfu/ni": "^0.21.4",
