--- a/template/base/package.json
+++ b/template/base/package.json
@@ -21,9 +21,10 @@
     "dev": "vite"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "@ark-ui/react": "^3.6.0",
+    "@codesandbox/sandpack-react": "^2.19.9",
     "@headlessui/react": "^1.7.15",
+    "@internationalized/date": "^3.5.4",
     "@mantine/hooks": "^6.0.1",
     "@mui/base": "^5.0.0-alpha.126",
     "@radix-ui/react-accordion": "^1.1.2",
@@ -32,26 +33,27 @@
     "@radix-ui/react-dialog": "^1.0.0",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-popover": "1.0.3",
+    "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-switch": "^1.0.1",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.1.3",
-    "@radix-ui/react-tooltip": "^1.0.5",
     "@radix-ui/react-toggle-group": "^1.1.0",
-    "@tanstack/react-table": "^8.5.15",
-    "react-aria-components": "^1.3.3",
-    "react-aria": "^3.34.3",
-    "react-stately": "^3.24.0",
-    "@internationalized/date": "^3.5.4",
-    "@tanstack/react-router": "^1.39.4",
+    "@radix-ui/react-tooltip": "^1.0.5",
+    "@radix-ui/react-separator": "^1.1.0",
     "@tanstack/react-query": "^5.51.11",
-    "@ark-ui/react": "^3.6.0",
-    "@radix-ui/react-progress": "^1.1.0",
-    "supertokens-web-js": "^0.13.0",
-    "jotai": "^2.9.1",
+    "@tanstack/react-router": "^1.39.4",
+    "@tanstack/react-table": "^8.5.15",
     "axios": "^1.7.7",
-    "posthog-js": "^1.165.0"
+    "jotai": "^2.9.1",
+    "posthog-js": "^1.165.0",
+    "react": "^18.3.1",
+    "react-aria": "^3.34.3",
+    "react-aria-components": "^1.3.3",
+    "react-dom": "^18.3.1",
+    "react-stately": "^3.24.0",
+    "supertokens-web-js": "^0.13.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.1",
@@ -59,16 +61,25 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.21.4",
     "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
-    "axe-playwright": "^2.0.1",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@types/react-syntax-highlighter": "^15.5.13",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
+    "axe-playwright": "^2.0.1",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.8.1",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-turbo": "^1.10.16",
     "eslint-import-resolver-typescript": "^3.5.2",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.6",
     "install-peers-cli": "^2.2.0",
     "json": "^11.0.0",
     "prettier": "^3.0.3",
@@ -80,17 +91,9 @@
     "rollup-plugin-banner2": "^1.2.2",
     "rollup-plugin-visualizer": "^5.9.0",
     "style-loader": "^3.3.3",
-    "vite-plugin-dts": "1.0.3",
-    "vite-plugin-top-level-await": "^1.3.0",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.2.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vite-plugin-dts": "1.0.3",
+    "vite-plugin-top-level-await": "^1.3.0"
   }
 }
